# dknet-ai-private

.github/workflows/: build-and-push-images.yml
agent-service/: CLAUDE.md  Dockerfile  README.md  frontend-improvement.md  hamilton-agent-integration.md  package.json  tsconfig.json
agent-service/config/: backend.config.json
agent-service/dagster-sidecar/: Dockerfile  pyproject.toml  server.py
agent-service/hamilton-sidecar/: Dockerfile  requirements.txt  server.py
agent-service/scratch/: Agent-agent-1-react-steps-2026-03-25T01-29-45.json  Agent-agent-1-trace-2026-03-25T01-29-43.json  fixed-validation-react.json  problematic-trace.json  problematic-workflow.json  react-step-after-refactor.json  schema-issue.json
agent-service/src/: index.ts  server.ts  test_e2e.ts
agent-service/src/agent/: agent-action-manager.ts  context-assembler.ts  context-optimization.ts  index.ts  latest-only-filter.ts  no-action-detail-filter.ts  operator-result-store.ts  prompts.ts  result-summarization-filter.ts  smolagent_prompts.ts  texera-agent.ts
agent-service/src/api/: auth-api.ts  backend-api.ts  compile-api.ts  execution-api.ts  workflow-api.ts
agent-service/src/tools/: code-op-tools.ts  execution-tools.ts  general-op-tools.ts  index.ts  metadata-tools.ts  parallel-call-coordinator.ts  result-formatting.ts  tools-utility.ts  workflow-tools.ts
agent-service/src/types/: agent.ts  execution.ts  index.ts  workflow.ts
agent-service/src/workflow/: auto-layout.ts  index.ts  workflow-state.ts  workflow-util.ts
amber/src/main/python/core/: data_processing_config.py
amber/src/main/python/core/runnables/: data_processor.py
amber/src/main/python/pytexera/: __init__.py
amber/src/main/python/pytexera/udf/: udf_multi_table_operator.py
frontend/: proxy.config.json
frontend/src/app/: app-routing.constant.ts  app-routing.module.ts  app.module.ts
frontend/src/app/common/type/: gui-config.ts
frontend/src/app/dashboard/component/: dashboard.component.html  dashboard.component.ts
frontend/src/app/dashboard/type/: dashboard-entry.ts
frontend/src/app/workspace/component/: workspace.component.ts
frontend/src/app/workspace/types/: custom-json-schema.interface.ts  execute-workflow.interface.ts  workflow-websocket.interface.ts
sql/updates/: 16.sql
(+84 files in other folders)
