[project]
name = "dagster-sidecar"
version = "0.1.0"
description = "Dagster execution sidecar for Texera Agent Service"
requires-python = ">=3.12,<3.13"

dependencies = [
    # === Dagster Execution Sidecar ===
    "dagster>=1.9",
    "fastapi>=0.104",
    "uvicorn>=0.24",

    # === Agent / LLM ===
    "smolagents[openai]==1.23.0",
    "litellm[proxy]",
    "gradio==5.50.0",
    "transformers==4.53.0",

    # === Core Data Science ===
    "numpy==1.26.4",
    "pandas==2.2.2",
    "openpyxl==3.1.5",
    "lxml==5.3.0",
    "beautifulsoup4==4.12.3",
    "geopandas==1.0.1",
    "cdflib==1.3.1",
    "pyarrow==21.0.0",
    "scikit-learn==1.5.0",
    "torch==2.8.0",

    # === Visualization ===
    "plotly==5.24.1",
    "wordcloud==1.9.3",
    "pillow==10.2.0",

    # === Database / Storage ===
    "SQLAlchemy==2.0.37",
    "pg8000==1.31.2",
    "pyiceberg==0.8.1",

    # === Utilities ===
    "setuptools==80.10.2",
    "loguru==0.7.0",
    "python-dateutil==2.8.2",
    "typing_extensions>=4.11.0",
    "tenacity==8.5.0",
    "overrides==7.4.0",
    "Deprecated==1.2.14",
    "bidict==0.22.0",
    "cached_property==1.5.2",
    "readerwriterlock==1.0.9",
    "psutil==5.9.0",
    "tzlocal==2.1",
    "fs==2.4.16",
    "pampy==0.3.0",
    "pybase64==1.3.2",

    # === Serialization / Protocol ===
    # NOTE: protobuf is NOT pinned here — dagster requires >=4, which conflicts
    # with the main env's protobuf==3.20.3. betterproto is also excluded.
    "black==24.3.0",

    # === External APIs ===
    "praw==7.6.1",

    # === Profiling ===
    "ydata-profiling==4.17.0",
    "pympler==1.1",
]

[project.optional-dependencies]
kramabench = [
    # Domain-Specific Tools
    "pymsis==0.12.0",
    "edgartools==3.14.6",
    "PyMuPDF==1.25.5",
    "PyPDF2==3.0.1",
    "skyfield==1.54",

    # NLP / Text Processing
    "nltk==3.9.1",
    "rouge-score==0.1.2",
    "rank-bm25==0.2.2",
    "RapidFuzz==3.13.0",
    "textdistance==4.6.3",
    "Unidecode==1.3.8",

    # Browser Automation
    "selenium==4.31.0",

    # Utilities
    "untruncate-json==1.1.0",
    "python-dotenv==1.2.0",
    "typeguard==4.4.4",
    "pyheaven==0.1.6.8",
]

[tool.setuptools]
packages = []
